--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,32 +1,32 @@
 {
-  "coc.preferences.extensionUpdateCheck":"weekly",
+  "coc.preferences.extensionUpdateCheck": "weekly",
   "suggest.autoTrigger": "always",
-  "suggest.minTriggerInputLength":3,
-  "suggest.noselect":true,
-  "suggest.floatConfig":{"border":false,"rounded":true,"winblend": 3},
-  "diagnostic.floatConfig":{"border":true,"winblend": 7},
-  "signature.floatConfig":{"winblend": 7},
-  "hover.floatConfig":{"border":true,"winblend": 7},
-  "eslint.enable":true,
+  "suggest.minTriggerInputLength": 3,
+  "suggest.noselect": true,
+  "suggest.floatConfig": { "border": false, "rounded": true, "winblend": 3 },
+  "diagnostic.floatConfig": { "border": true, "winblend": 7 },
+  "signature.floatConfig": { "winblend": 7 },
+  "hover.floatConfig": { "border": true, "winblend": 7 },
+  "eslint.enable": true,
   "astro.enable": true,
-  "diagnostic.separateRelatedInformationAsDiagnostics":true,
-  "diagnostic.virtualText":false,
-  "diagnostic.virtualTextCurrentLineOnly":false,	
-  "diagnostic.virtualTextLevel":"warning",
-  "diagnostic.virtualTextPrefix":"◆",
-  "diagnostic.warningSign":"◆",
-  "diagnostic.enableHighlightLineNumber":false,	
-  "typescript.showUnused":true,
-  "typescript.showDeprecated":false,
-  "javascript.showDeprecated":false, 
-  "typescript.preferences.quoteStyle":"single",
-  "javascript.preferences.quoteStyle":"single",
-  "typescript.format.enable":false,
-  "javascript.format.enable":false,
-  "typescript.autoClosingTags":false,
-  "css.completion.completePropertyWithSemicolon":false,
-  "scss.completion.completePropertyWithSemicolon":false,
-  "yank.enableCompletion":false,
+  "diagnostic.separateRelatedInformationAsDiagnostics": true,
+  "diagnostic.virtualText": false,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualTextLevel": "warning",
+  "diagnostic.virtualTextPrefix": "◆",
+  "diagnostic.warningSign": "◆",
+  "diagnostic.enableHighlightLineNumber": false,
+  "typescript.showUnused": true,
+  "typescript.showDeprecated": false,
+  "javascript.showDeprecated": false,
+  "typescript.preferences.quoteStyle": "single",
+  "javascript.preferences.quoteStyle": "single",
+  "typescript.format.enable": false,
+  "javascript.format.enable": false,
+  "typescript.autoClosingTags": false,
+  "css.completion.completePropertyWithSemicolon": false,
+  "scss.completion.completePropertyWithSemicolon": false,
+  "yank.enableCompletion": false,
   "suggest.completionItemKindLabels": {
     "function": "\uf794",
     "method": "\uf6a6",
@@ -53,5 +53,16 @@
     "typeParameter": "\uf278",
     "default": "\uf29c"
   },
-  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/16.0.2/clangd_16.0.2/bin/clangd"
+  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/16.0.2/clangd_16.0.2/bin/clangd",
+  "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "html",
+    "markdown",
+    "typescriptreact",
+    "typescript",
+    "javascriptreact",
+    "javascript",
+    "json",
+    "graphql"
+  ]
 }
